--- a/style.css
+++ b/style.css
@@ -48,3 +48,9 @@ footer {
   max-width:140px;
   margin-bottom:10px;
 }
+
+.label {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+}
